# enzyme-gcn-classifier

./: .gitignore  Makefile  PROJECT_EXPLANATION.md  README.md  STATUS.md  TESTING_GUIDE.md  main.py  model.py  pyproject.toml  requirements.txt  test_local.py  utils.py
.claude/: settings.local.json
scripts/: prepare_data.py
src/: __init__.py  build_graph.py  cli.py  config.py  data_schema.py  datasets.py  featurize.py  losses.py  metrics.py  model_gnn.py  splits.py  train.py  utils_logging.py  utils_seed.py
tests/: __init__.py  test_build_graph.py  test_featurize.py  test_model.py
